# DeMage-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  vcpkg.json
CMake/: copyright
Engine/: CMakeLists.txt  Engine.vcxproj  packages.config  precomp.h
Engine/src/: Engine.h
Engine/src/Audio/: AudioSystem.cpp  AudioSystem.h
Engine/src/Controller/: IController.cpp  IController.h
Engine/src/Core/: Application.cpp  Application.h  EngineSystems.cpp  EngineSystems.h  EntryPoint.h
Engine/src/ECS/: Component.cpp  Component.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h
Engine/src/IJSONParser/: ijsonparser.cpp  ijsonparser.h
Engine/src/Input/: InputAction.h  InputManager.cpp  InputManager.h  inputbinding.h  inputenums.h  sdlinputbinding.h
Engine/src/Logger/: Logger.cpp  Logger.h
Engine/src/Physics/: PhysicsSystem.cpp
Engine/src/Render/: RenderSystem.cpp  RenderSystem.h  Renderer.cpp  Renderer.h  Texture.cpp  Texture.h  TextureManager.cpp  TextureManager.h  Window.cpp  Window.h
Engine/src/imgui/: imguiRender.cpp  imguiRender.h
Game/: CMakeLists.txt  Game.vcxproj  packages.config
Game/Data/Input/: input_config.json
Game/src/: precomp.cpp  precomp.h
Game/src/Core/: GameApp.cpp  GameApp.h
Game/src/Entities/: CameraController.cpp  CameraController.h  PlayerController.cpp  PlayerController.h
UIWiz/: CMakeLists.txt
UIWiz/src/: widget.cpp  widget.h
Utils/: CMakeLists.txt  Utils.vcxproj  precomp.h
Utils/Event/: channel.cpp  channel.h  event.h  eventlistener.cpp  eventlistener.h
Utils/Map/: unorderedcastmap.h
